--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Angular Admin Dashboard Template with DaisyUI" />
-    <title>Angular Admin Dashboard</title>
+    <meta name="description" content="KCOW" />
+    <title>KCOW</title>
     <script>
       // Apply theme before Angular loads to prevent flash
       (function() {
