--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -1,18 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="KCOW" />
     <title>KCOW</title>
-    <script>
-      // Apply theme before Angular loads to prevent flash
-      (function() {
-        const saved = localStorage.getItem('app-theme');
-        const theme = saved || (window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light');
-        document.documentElement.setAttribute('data-theme', theme);
-      })();
-    </script>
   </head>
   <body>
     <app-root></app-root>
